<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智慧家居</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="login_please_login">尚未登录</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="try_agin_exit_text">再按一次退出程序</string>
    <string name="title_activity_load_">Load_Activity</string>

    <!-- 找回密码 -->
    <string name="find_password">获取密码</string>
    <string name="through_phone">手机找回</string>
    <string name="through_mail">邮箱找回</string>
    <string name="register_phone_number">注册手机号</string>
    <string name="register_mail_number">注册邮箱号</string>
    <string name="sms_verification_code">短信验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="hint_password">新密码以短信形式发送到该手机号，请注意查收</string>

    <!-- 登录 -->
    <string name="please_user_name_text">用户名/手机号/邮箱</string>
    <string name="please_pass_word_text">请输入密码</string>
    <string name="remenber_pass">记住密码</string>
    <string name="forget_pass_word">忘记密码?</string>
    <string name="login_text">登 录</string>
    <string name="registered_new_user">注册</string>

    <!-- 选择联系人 -->
    <string name="confrim">确定</string>

    <!-- 安全服务中心 -->
    <string name="openControl">是否开启监控</string>
    <string name="openControlTime">开启监控时间</string>
    <string name="closeControTime">结束监控时间</string>
    <string name="setWeek">设置星期</string>
    <string name="setDate">设置时间</string>
    <string name="securityWarning">安全警告设置</string>
    <string name="noticeType">通知方式</string>
    <string name="shortMessage">手机短信</string>
    <string name="manage">联系人　</string>
    <string name="phoneNumber">手机号</string>
    <string name="roleGroup">角色分组</string>
    <string name="save">保存</string>
    <string name="commit">提交</string>
    <string name="back">退出</string>

    <!-- 添加设备 -->
    <string name="equipment_brand">设备品牌</string>
    <string name="select_brand">选择设备品牌</string>
    <string name="equipment_model">设备型号</string>
    <string name="select_model">选择设备型号</string>
    <string name="equipment_UID">设备UID号</string>
    <string name="write_UID">填写设备UID号</string>
    <string name="equipment_name">设备账号</string>
    <string name="write_equipment_name">填写设备账号</string>
    <string name="equipment_password">设备密码</string>
    <string name="write_equipment_password">填写设备密码</string>
    <string name="installation_site">安装地点</string>
    <string name="write_installation_site">填写安装地点，以备后期查看</string>
    <string name="site_photo">地点照片</string>
    <string name="sele_site_photo">拍摄或选择安装地点照片</string>
    <string name="next">下一步</string>

    <!-- 设置 -->
    <string name="install_flow_title">省流量</string>
    <string name="install_flow_describute">2G/3G下不显示图片</string>
    <string name="cache_title">清除缓存</string>

    <!-- 找回密码界面 -->
    <string name="find_pwd_text">找回密码</string>
    <string name="phone_find_back_text">手机找回</string>
    <string name="email_find_back_text">邮箱找回</string>
    <string name="email_style_err">邮箱格式不正确</string>
    <string name="email_code_null">请输入邮箱号</string>
    <string name="please_in_phone_number_text">请输入手机号</string>
    <string name="please_in_phone_code_text">请输入验证码</string>
    <string name="phone_get_err">手机号格式不正确</string>
    <string name="error_title">错误</string>
    <string name="loading">正在加载</string>

    <!-- 登录 -->
    <string name="username_null">用户名为空</string>
    <string name="password_null">密码为空</string>

    <!-- 验证码 -->
    <string name="phone_send_number">秒后可重新发送</string>
    <string name="phone_get_number">重新获取验证码</string>

    <!-- 用户提示 -->
    <string name="error_network_exception">网络通信异常，请稍后重试</string>
    <string name="error_network_disconnect">网络不可达,请开启Wifi或者移动数据网络</string>
    <string name="error_reply">无法回复</string>
    <string name="error_create_topic">无法点评</string>
    <string name="error_login">无法登录</string>
    <string name="error_fav_nodes">无法收藏</string>
    <string name="error_fav_topic">无法连接服务器</string>
    <string name="error_get_profile">无法获取用户个人资料</string>
    <string name="error_unknown">未知错误</string>
    <string name="error_obtain_once">无法获取ONCE</string>
    <string name="get_info_mation_text">获取信息失败</string>
    <string name="title_activity_scenic__tickets_">Scenic_Tickets_Activity</string>
    <string name="reg_loaing">正在努力加载...</string>
    <string name="please_loading_hint">请稍后...</string>
    <string name="title_activity_scenic_map">ScenicMapActivity</string>
    <string name="fill_in_the_phone_number_text">1.填写手机号</string>
    <string name="seting_passwprd_text">2.设置密码</string>
    <string name="message_auth_text">3.短信验证</string>
    <string name="please_input_phone_number_text">请输入11位手机号</string>
    <string name="next_button_text">下一步</string>
    <string name="login_time_out">已与服务器断开连接,请重新登录</string>
    <string name="hello">Hello World, SetPasswordActivity!</string>

    <!-- 萤石需要mesg -->
    <string name="realplay_password_error_title">请输入设备密码</string>
    <string name="realplay_login_password_msg">初始密码为设备验证码，若设备已注册平台，请输入用户ID</string>
    <string name="realplay_login_password_error">登录设备失败</string>
    <string name="realplay_play_fail_becauseof_network">视频播放失败，请检查您的网络</string>
    <string name="realplay_password_error_message3">您的设备版本过低，需要输入设备密码，建议您升级设备</string>
    <string name="realplay_password_error_message1">初始密码为12345，若密码已被修改，请输入修改后的密码</string>
    <string name="realplay_encrypt_password_error_title">请输入视频图片加密密码</string>
    <string name="realplay_encrypt_password_error_message">您的视频已加密，请输入密码进行查看，初始密码为机身标签上的验证码，如果没有验证码，请输入ABCDEF（密码区分大小写）</string>
    <string name="remoteplayback_over_link">设备连接数过大，停止其他连接后再试试吧</string>
    <string name="realplay_fail_device_not_exist">设备不在线</string>
    <string name="realplay_fail_connect_device">播放失败，连接设备异常</string>
    <string name="realplay_set_fail_status">视频播放失败，设备已开启隐私保护</string>
    <string name="camera_not_online">设备不在线</string>
    <string name="realplay_play_fail">视频播放失败</string>
    <string name="please_input_phonenumber_txt">请输入手机号码</string>
    <string name="get_sms_code">获取短信验证码</string>
    <string name="sms_verify_code_received">请输入您收到的手机验证码</string>
    <string name="please_input_phone_txt">请输入手机号码开通萤石云服务：/n（若对流程不清楚，请阅读《私有云账户对接流程》）</string>
    <string name="open_ys_service">开通萤石云服务</string>
    <string name="cancel">取消</string>
    <string name="get_sms_code_fail">获取短信验证码失败</string>
    <string name="open_ys_service_success">开通萤石云服务成功</string>
    <string name="open_ys_service_fail">开通萤石云服务失败</string>
    <string name="countdown">留言时长还剩%d秒</string>
    <string name="secure_validatee_fail">安全验证失败</string>
    <string name="secure_validate_success">安全验证成功</string>
    <string name="submit_secure_validate">提交安全验证</string>
    <string name="secure_validate">硬件安全验证</string>
    <string name="camera_lens_too_busy">镜头转动中，请稍候</string>
    <string name="ptz_is_preseting">镜头转动中，请稍候</string>
    <string name="ptz_control_timeout_sound_lacalization_failed">听声辨位已开启，操作失败</string>
    <string name="ptz_control_timeout_cruise_track_failed">轨迹巡航中，请稍候</string>
    <string name="ptz_preset_invalid_position_failed">当前位置已被删除，请返回刷新</string>
    <string name="ptz_preset_current_position_failed">当前就在这个位置哦</string>
    <string name="ptz_preset_sound_localization_failed">听声辨位中，请稍候</string>
    <string name="ptz_operation_failed">操作失败</string>
    <string name="ptz_operation_too_frequently">操作太频繁啦，先歇歇吧</string>
    <string name="ptz_preset_exceed_maxnum_failed">已经不能收藏更多了</string>
    <string name="ptz_privacying_failed">镜头已遮蔽，无法操作云台</string>
    <string name="ptz_mirroring_failed">语音对讲中，无法操作云台</string>
    <string name="alarm_type_unknown">发生未知类型报警</string>
    <string name="alarm_type_infrared">发生人体感应事件</string>
    <string name="alarm_type_remotecontrol">发生紧急遥控按钮事件</string>
    <string name="alarm_type_motion_detection">发生移动侦测报警</string>
    <string name="alarm_type_baby_cry">发生婴儿啼哭报警</string>
    <string name="alarm_type_door">发生门磁报警</string>
    <string name="alarm_type_smoke">发生烟感报警</string>
    <string name="alarm_type_gas">发生可燃气体报警</string>
    <string name="alarm_type_water">发生水侵报警</string>
    <string name="alarm_type_urgent_button">发生紧急按钮报警</string>
    <string name="alarm_type_person_alarm">发生人体感应报警</string>
    <string name="device_add_text">添加设备</string>
    <string name="device_update_text">修改设备</string>
    <string name="login_hint_text">登录中...</string>
    <string name="push_event_get">收到</string>
    <string name="push_event_get_count">条推送消息。</string>
    <string name="device_defence_open_success">活动检测开启成功</string>
    <string name="device_defence_open_fail">活动检测开启失败</string>
    <string name="device_defence_close_success">活动检测关闭成功</string>
    <string name="device_defence_close_fail">活动检测失关闭</string>

    <!-- 萤石需要mesg -->


    <!-- 录像功能 -->
    <string name="remoteplayback_SDCard_disable_use">存储卡不可用</string>
    <string name="remoteplayback_record_fail_for_memory">录像中断,存储空间已满</string>
    <string name="title_activity_activity__video__playback">Activity_Video_Playback</string>
    <string name="video_playback_title">录像回放</string>
    <string name="select_date">请选择日期</string>
    <string name="certain">确定</string>
    <string name="remoteplayback_record_fail">录像失败</string>
    <string name="remoteplayback_capture_fail">抓图失败</string>
    <string name="remoteplayback_norecordfile_alarm">没有查询到该时刻的报警录像</string>
    <string name="remoteplayback_norecordfile">没有查询到录像</string>
    <string name="remoteplayback_searchfile_fail_for_device">查询录像失败</string>
    <string name="remoteplayback_capture_fail_for_memory">抓图失败,存储空间已满</string>
    <string name="remoteplayback_searchfile_fail_for_network">查询录像失败,请检查您的网络</string>
    <string name="remoteplayback_connect_device_error">播放中断，请重试</string>
    <string name="remoteplayback_connect_server_error">连接服务器失败，请重试</string>
    <string name="remoteplayback_fail">视频播放失败</string>
    <string name="title_activity_real_play">RealPlayActivity</string>
    <!-- 一键配置模块 -->
    <string name="start_voice_talk">正在发起对讲</string>
    <string name="local_network_exception">没有可用网络，请检查您的网络</string>
    <string name="realplay_set_fail_network">设置失败，请检查您的网络</string>
    <string name="setting_video_level">正在设置画面质量…</string>
    <string name="talking">对讲中…</string>
    <string name="realplay_play_talkback_fail_ison">同一时间只能与一台设备进行对讲哦，请停止其他对讲后再尝试</string>
    <string name="realplay_play_talkback_fail_privacy">隐私保护模式下无法对讲</string>
    <string name="realplay_play_talkback_fail">对讲开启失败</string>
    <string name="realplay_set_vediomode_fail">视频质量切换失败</string>
    <string name="device_password_is_null">设备密码不能为空</string>
    <string name="press_to_talk_release_to_listen">按住说话\n松开收听</string>
    <!--   萤石需要mesg  -->

    <string name="isCheck">是否已协助核查</string>
    <string name="isSafe">是否存在安全隐患</string>
    <string name="isDeal">是否已处理</string>

</resources>
