<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/font_color"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/ListPadding.ListLevel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isCheck" />

            <com.cdhxqh.household_app.ui.widget.SwitchButtonIs
                android:id="@+id/wiperSwitch1"
                style="@style/ListPadding"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_marginRight="10dp"
                android:layout_margin="6dp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/list_line_x"></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/font_color"
            android:orientation="horizontal">

            <TextView
                style="@style/ListPadding.ListLevel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isSafe" />

            <com.cdhxqh.household_app.ui.widget.SwitchButtonIs
                android:id="@+id/wiperSwitch2"
                style="@style/ListPadding"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_marginRight="10dp"
                android:layout_margin="6dp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/list_line_x"></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/font_color"
            android:orientation="horizontal">

            <TextView
                style="@style/ListPadding.ListLevel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isDeal" />

            <com.cdhxqh.household_app.ui.widget.SwitchButtonIs
                android:id="@+id/wiperSwitch3"
                style="@style/ListPadding"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_marginRight="10dp"
                android:layout_margin="6dp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/list_line_x"></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/font_color"
            android:orientation="horizontal">

           <!-- <TextView
                style="@style/ListPadding.ListLevel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="关闭" />

            <com.cdhxqh.household_app.ui.widget.SwitchButtonIs
                android:id="@+id/wiperSwitch4"
                style="@style/ListPadding"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_marginRight="10dp"
                android:layout_margin="6dp" />-->

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/list_line_x"></View>

    </LinearLayout>

</LinearLayout>